--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "common-tags": "^1.8.0",
     "knex": "^0.16.5",
     "lodash": "^4.17.11",
-    "sqlite3": "^4.0.8"
+    "sqlite3": "^4.0.8",
+    "tempy": "^0.3.0"
   },
   "devDependencies": {
     "bcrypt": "^3.0.6",
